--- a/po/pl.po
+++ b/po/pl.po
@@ -3,14 +3,14 @@
 #
 # This file is distributed under the same license as @PACKAGE@ package. FIRST
 #
-# , 2011.
+# Mariusz Fik <fisiu@opensuse.org>, 2011.
 msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-10-12 15:11+0200\n"
-"PO-Revision-Date: 2011-09-25 15:08+0200\n"
-"Last-Translator: \n"
+"POT-Creation-Date: 2011-10-21 11:59+0200\n"
+"PO-Revision-Date: 2011-10-18 02:18+0200\n"
+"Last-Translator: Mariusz Fik <fisiu@opensuse.org>\n"
 "Language-Team: Polish <kde-i18n-doc@kde.org>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
@@ -25,7 +25,7 @@ msgstr "\t--cleanup-algorithm, -c <algo>\tAlgorytm oczyszczania zrzutu."
 
 #: ../tools/snapper.cc:1003
 msgid "\t--config, -c <name>\t\tSet name of config to use."
-msgstr "\t--config, -c <nazwa>\t\tUstawienie nazwy config w użyciu."
+msgstr "\t--config, -c <nazwa>\t\tUstawienie nazwy konfiguracji do użycia ."
 
 #: ../tools/snapper.cc:432 ../tools/snapper.cc:548
 msgid "\t--description, -d <description>\tDescription for snapshot."
@@ -45,15 +45,16 @@ msgstr "\t--input, -i <plik>\t\tCzytaj pliki, dla których można cofnąć zmian
 
 #: ../tools/snapper.cc:721
 msgid "\t--output, -o <file>\t\tSave status to file."
-msgstr "\t--output, -o <plik>\t\tZapisz status pliku."
+msgstr "\t--output, -o <plik>\t\tZapisz status do pliku."
 
 #: ../tools/snapper.cc:430
+#, fuzzy
 msgid "\t--pre-number <number>\t\tNumber of corresponding pre snapshot."
-msgstr "\t--pre-number <numer>\t\tLiczba odpowiadająca wcześniejszemu zrzutowi."
+msgstr "\t--pre-number <numer>\t\tLiczba odpowiednich wczesnych zrzutów."
 
 #: ../tools/snapper.cc:431
 msgid "\t--print-number, -p\t\tPrint number of created snapshot."
-msgstr "\t--print-number, -p\t\tDrukuj numer tworzonego zrzutu."
+msgstr "\t--print-number, -p\t\tWyświetl numer tworzonego zrzutu."
 
 #: ../tools/snapper.cc:1000
 msgid "\t--quiet, -q\t\t\tSuppress normal output."
@@ -61,7 +62,7 @@ msgstr "\t--quiet, -q\t\t\tWyłącza normalne wyjście."
 
 #: ../tools/snapper.cc:1002
 msgid "\t--table-style, -t <style>\tTable style (integer)."
-msgstr "\t--table-style, -t <styl>\tStyle tabeli (integer)."
+msgstr "\t--table-style, -t <styl>\tStyl tabeli (całkowity)."
 
 #: ../tools/snapper.cc:223
 msgid "\t--template, -t <name>\t\tName of config template to use."
@@ -69,23 +70,23 @@ msgstr "\t--template, -t <name>\t\tNazwa konfiguracji szablonu do użycia."
 
 #: ../tools/snapper.cc:429
 msgid "\t--type, -t <type>\t\tType for snapshot."
-msgstr "\t--type, -t <typ>\t\tTyp zrzutu."
+msgstr "\t--type, -t <type>\t\tRodzaj zrzutu."
 
 #: ../tools/snapper.cc:287
 msgid "\t--type, -t <type>\t\tType of snapshots to list."
-msgstr "\t--type, -t <typ>\t\tLista typów zrzutu."
+msgstr "\t--type, -t <type>\t\tRodzaj zrzutów do wyświetlenia."
 
 #: ../tools/snapper.cc:434 ../tools/snapper.cc:550
 msgid "\t--userdata, -u <userdata>\tUserdata for snapshot."
-msgstr "\t--userdata, -u <userdata>\tZrzut userdata."
+msgstr "\t--userdata, -u <userdata>\tDane użytkownika dla zrzutu."
 
 #: ../tools/snapper.cc:1001
 msgid "\t--verbose, -v\t\t\tIncrease verbosity."
-msgstr "\t--verbose, -v\t\t\tZwiększenie gadatliwości."
+msgstr "\t--verbose, -v\t\t\tZwiększenie szczegółowości."
 
 #: ../tools/snapper.cc:1005
 msgid "\t--version\t\t\tPrint version and exit."
-msgstr "\t--version\t\t\tDrukuje wersję programu i kończy pracę"
+msgstr "\t--version\t\t\tWyświetl wersję programu i zakończ pracę."
 
 #: ../tools/snapper.cc:945
 msgid "\tsnapper cleanup <cleanup-algorithm>"
@@ -105,7 +106,7 @@ msgstr "\tsnapper delete <number>"
 
 #: ../tools/snapper.cc:774
 msgid "\tsnapper diff <number1>..<number2> [files]"
-msgstr "\tsnapper diff <numer1>..<numer2> [plik]"
+msgstr "\tsnapper diff <numer1>..<numer2> [pliki]"
 
 #: ../tools/snapper.cc:284
 msgid "\tsnapper list"
@@ -133,11 +134,11 @@ msgstr "\tsnapper umount <numer>"
 
 #: ../tools/snapper.cc:823
 msgid "\tsnapper undochange <number1>..<number2> [files]"
-msgstr "\tsnapper undochange <numer1>..<numer2> [plik]"
+msgstr "\tsnapper undochange <numer1>..<numer2> [pliki]"
 
 #: ../tools/snapper.cc:999
 msgid "    Global options:"
-msgstr "    Globalne opcje:"
+msgstr "    Opcje globalne:"
 
 #: ../tools/snapper.cc:428
 msgid "    Options for 'create' command:"
@@ -169,15 +170,15 @@ msgstr "  Czyszczenie zrzutów:"
 
 #: ../tools/snapper.cc:717 ../tools/snapper.cc:773
 msgid "  Comparing snapshots:"
-msgstr "  Porównanie zrzutów:"
+msgstr "  Porównywanie zrzutów:"
 
 #: ../tools/snapper.cc:218
 msgid "  Create config:"
-msgstr "  Tworzenie config:"
+msgstr "  Tworzenie konfiguracji:"
 
 #: ../tools/snapper.cc:425
 msgid "  Create snapshot:"
-msgstr "  Utworzono zrzut:"
+msgstr "  Tworzenie zrzutu:"
 
 #: ../tools/snapper.cc:609
 msgid "  Delete snapshot:"
@@ -201,7 +202,7 @@ msgstr "  Montuj zrzut:"
 
 #: ../tools/snapper.cc:681
 msgid "  Umount snapshot:"
-msgstr "  Odmontuj zrzut::"
+msgstr "  Odmontuj zrzut:"
 
 #: ../tools/snapper.cc:822
 msgid "  Undo changes:"
@@ -271,7 +272,7 @@ msgstr "Konfiguracja"
 #: ../tools/snapper.cc:1165
 #, c-format
 msgid "Config '%s' is invalid."
-msgstr "Repozytorium \"%s\" jest niepoprawne."
+msgstr "Konfiguracja '%s' jest niepoprawna."
 
 #: ../tools/snapper.cc:1160
 #, c-format
@@ -320,7 +321,7 @@ msgstr "Nieprawidłowe zrzuty."
 
 #: ../tools/snapper.cc:247
 msgid "Invalid subvolume."
-msgstr "Nieprawidłowy subvolume."
+msgstr "Nieprawidłowy podwolumen."
 
 #: ../tools/snapper.cc:1107
 #, c-format
@@ -330,12 +331,12 @@ msgstr "Nieprawidłowy styl tabeli %d."
 #: ../tools/snapper.cc:120 ../tools/snapper.cc:129 ../tools/snapper.cc:138
 #: ../tools/snapper.cc:535 ../tools/snapper.cc:600
 msgid "Invalid userdata."
-msgstr "Nieprawidłowy userdata."
+msgstr "Nieprawidłowe dane użytkownika."
 
 #: ../tools/snapper.cc:207
 #, c-format
 msgid "Listing configs failed (%s)."
-msgstr "Pliki konfiguracyjne listy nie powiodły się (%s)."
+msgstr "Wyświetlenie konfiguracji nie powiodło się (%s)."
 
 #: ../tools/utils/GetOpts.cc:70
 #, c-format
@@ -345,15 +346,15 @@ msgstr "Brakujący argument dla opcji polecenia '%s'."
 #: ../tools/utils/GetOpts.cc:68
 #, c-format
 msgid "Missing argument for global option '%s'."
-msgstr "Brakujący argument dla globalnej opcji '%s'."
+msgstr "Brakujący argument dla opcji globalnej '%s'."
 
 #: ../tools/snapper.cc:496
 msgid "Missing or invalid pre-number."
-msgstr "Brakujące lub nieprawidłowe wcześniejsze numery."
+msgstr "Brakujący lub nieprawidłowe wcześniejszy numer."
 
 #: ../tools/snapper.cc:1134
 msgid "No command provided."
-msgstr "Nie podano polecenia, pod warunkiem."
+msgstr "Nie podano polecenia."
 
 #: ../tools/snapper.cc:756 ../tools/snapper.cc:857
 #, c-format
@@ -383,7 +384,7 @@ msgstr "Zrzutu '%u' nie znaleziono."
 
 #: ../tools/snapper.cc:191
 msgid "Subvolume"
-msgstr "Subvolume"
+msgstr "Podwolumen"
 
 #: ../tools/snapper.cc:1135 ../tools/snapper.cc:1144
 #: ../tools/utils/GetOpts.cc:63 ../tools/utils/GetOpts.cc:71
@@ -392,7 +393,7 @@ msgstr "Spróbuj 'snapper help'  aby uzyskać więcej informacji."
 
 #: ../tools/snapper.cc:334
 msgid "Type"
-msgstr "Typ"
+msgstr "Rodzaj"
 
 #: ../tools/snapper.cc:980
 #, c-format
@@ -402,7 +403,7 @@ msgstr "Nieznany algorytm czyszczenia '%s'."
 #: ../tools/snapper.cc:1143
 #, c-format
 msgid "Unknown command '%s'."
-msgstr "Nieznane polecenie \"%s\""
+msgstr "Nieznane polecenie '%s'."
 
 #: ../tools/utils/GetOpts.cc:60
 #, c-format
@@ -416,11 +417,11 @@ msgstr "Nieznana opcja '%s' dla polecenia  '%s'."
 
 #: ../tools/snapper.cc:474
 msgid "Unknown type of snapshot."
-msgstr "Nieznany typ zrzutu."
+msgstr "Nieznany rodzaj zrzutu."
 
 #: ../tools/snapper.cc:322
 msgid "Unknown type of snapshots."
-msgstr "Nieznany typ zrzutu."
+msgstr "Nieznany rodzaj zrzutów."
 
 #: ../tools/snapper.cc:1108
 #, c-format
@@ -429,7 +430,7 @@ msgstr "Proszę użyć liczby całkowitej od %d do %d"
 
 #: ../tools/snapper.cc:340 ../tools/snapper.cc:365 ../tools/snapper.cc:392
 msgid "Userdata"
-msgstr "Userdata"
+msgstr "Dane użytkownika"
 
 #: ../tools/snapper.cc:1025
 msgid "comparing snapshots..."
@@ -438,12 +439,12 @@ msgstr "porównanie zrzutów..."
 #: ../tools/snapper.cc:1038
 #, c-format
 msgid "creating %s"
-msgstr "Tworzenie %s"
+msgstr "tworzenie %s"
 
 #: ../tools/snapper.cc:1042
 #, c-format
 msgid "deleting %s"
-msgstr "kasowanie %s"
+msgstr "usuwanie %s"
 
 #: ../tools/snapper.cc:1026
 msgid "done"
@@ -452,17 +453,17 @@ msgstr "zrobione"
 #: ../tools/snapper.cc:1045
 #, c-format
 msgid "failed to create %s"
-msgstr "Nie udało się utworzyć %s"
+msgstr "nie udało się utworzyć %s"
 
 #: ../tools/snapper.cc:1049
 #, c-format
 msgid "failed to delete %s"
-msgstr "Nie udało się usunąć %s"
+msgstr "nie udało się usunąć %s"
 
 #: ../tools/snapper.cc:1047
 #, c-format
 msgid "failed to modify %s"
-msgstr "Nie udało się zmodufikować %s"
+msgstr "nie udało się zmodyfikować %s"
 
 #: ../tools/snapper.cc:1040
 #, c-format
@@ -471,15 +472,15 @@ msgstr "modyfikowanie %s"
 
 #: ../tools/snapper.cc:1035
 msgid "undoing change done"
-msgstr "zmiany cofania zrobione "
+msgstr "cofanie zmian zakończone"
 
 #: ../tools/snapper.cc:1034
 msgid "undoing change..."
-msgstr "zmiany cofania..."
+msgstr "cofanie zmian..."
 
 #: ../tools/snapper.cc:996
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
-msgstr "Użycie: snapper [--opcje-globalne] <polecenia> [--opcje-poleceń] [polecenie-argumenty]"
+msgstr "Użycie: snapper [--opcje-globalne] <polecenia> [--opcje-poleceń] [argumenty-polecenia]"
 
 #, fuzzy
 #~| msgid "add needs one argument"
