--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -3,99 +3,93 @@
 #
 # This file is distributed under the same license as @PACKAGE@ package. FIRST
 #
-# Luiz Fernando Ranghetti <elchevive@opensuse.org>, 2011, 2012.
+# margurite <i@marguerite.su>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-10-17 12:33+0200\n"
-"PO-Revision-Date: 2012-10-18 22:21-0300\n"
-"Last-Translator: Luiz Fernando Ranghetti <elchevive@opensuse.org>\n"
-"Language-Team: Brazilian Portuguese <opensuse-pt@opensuse.org>\n"
-"Language: pt_BR\n"
+"PO-Revision-Date: 2012-10-25 19:25+0800\n"
+"Last-Translator: \n"
+"Language-Team: Chinese Traditional <kde-i18n-doc@kde.org>\n"
+"Language: zh_TW\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Lokalize 1.4\n"
-"Plural-Forms: nplurals=2; plural=n>1;\n"
+"X-Generator: Lokalize 1.5\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 
 #: ../client/snapper.cc:475 ../client/snapper.cc:609
 msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshot."
-msgstr ""
-"\t--cleanup-algorithm, -c <algoritmo>\tAlgoritmo de limpeza para o snapshot."
+msgstr "\t--cleanup-algorithm, -c <算法> \t快照的清空算法。"
 
 #: ../client/snapper.cc:477
 msgid "\t--command <command>\tRun command and create pre and post snapshots."
-msgstr "\t--command <command>\tExecutar comando e criar pré e pós snapshots."
+msgstr "\t--command <命令> \t运行命令，创建预快照和后期快照。"
 
 #: ../client/snapper.cc:1146
 msgid "\t--config, -c <name>\t\tSet name of config to use."
-msgstr "\t--config, -c <nome>\t\tNome do conjunto de configurações a utilizar."
+msgstr "\t--config, -c <配置名称> \t\t设定要使用的配置文件。"
 
 #: ../client/snapper.cc:474 ../client/snapper.cc:608
 msgid "\t--description, -d <description>\tDescription for snapshot."
-msgstr "\t--description, -d <descrição>\tDescrição do snapshot."
+msgstr "\t--description, -d <描述> \t快照描述。"
 
 #: ../client/snapper.cc:245
 msgid "\t--fstype, -f <fstype>\t\tManually set filesystem type."
-msgstr ""
-"\t--fstype, -f <tipo_de_sistema_de_arquivos>\t\tDefinir o tipo de sistema de "
-"arquivos manualmente."
+msgstr "\t--fstype, -f <文件系统类型> \t\t手动设定文件系统类型。"
 
 #: ../client/snapper.cc:881
 msgid "\t--input, -i <file>\t\tRead files for which to undo changes from file."
-msgstr ""
-"\t--input, -i <arquivo>\t\tLer arquivos que serão revertidos a partir do "
-"arquivo."
+msgstr "\t--input, -i <文件> \t\t读取要回滚的文件。"
 
 #: ../client/snapper.cc:772
 msgid "\t--output, -o <file>\t\tSave status to file."
-msgstr "\t--output, -o <arquivo>\t\tSalvar status em arquivo."
+msgstr "\t--output, -o <文件> \t\t保存状态到文件。"
 
 #: ../client/snapper.cc:472
 msgid "\t--pre-number <number>\t\tNumber of corresponding pre snapshot."
-msgstr "\t--pre-number <número>\t\tNúmero do pré-snapshot correspondente."
+msgstr "\t--pre-number <编号> \t\t相关的预快照编号。"
 
 #: ../client/snapper.cc:473
 msgid "\t--print-number, -p\t\tPrint number of created snapshot."
-msgstr "\t--print-number, -p\t\tNúmero de impressão do snapshot criado."
+msgstr "\t--print-number, -p \t\t打印创建的快照的编号。"
 
 #: ../client/snapper.cc:1143
 msgid "\t--quiet, -q\t\t\tSuppress normal output."
-msgstr "\t--quiet, -q\t\t\tOcultar saída normal."
+msgstr "\t--quiet, -q\t\t\t静默正常输出。"
 
 #: ../client/snapper.cc:1145
 msgid "\t--table-style, -t <style>\tTable style (integer)."
-msgstr "\t--table-style, -t <estilo>\tEstilo da tabela (inteiro)."
+msgstr "\t--table-style, -t <样式> \t表格样式（整数）。"
 
 #: ../client/snapper.cc:246
 msgid "\t--template, -t <name>\t\tName of config template to use."
-msgstr ""
-"\t--template, -t <nome>\t\tNome do template de configuração a utilizar."
+msgstr "\t--template, -t <名称> \t\t要使用的配置模板名称。"
 
 #: ../client/snapper.cc:471
 msgid "\t--type, -t <type>\t\tType for snapshot."
-msgstr "\t--type, -t <tipo>\t\tTipo do snapshot."
+msgstr "\t--type, -t <类型> \t\t快照类型。"
 
 #: ../client/snapper.cc:325
 msgid "\t--type, -t <type>\t\tType of snapshots to list."
-msgstr "\t--type, -t <tipo>\t\tTipos de snapshot a listar."
+msgstr "\t--type, -t <类型> \t\t要列示的快照类型。"
 
 #: ../client/snapper.cc:476 ../client/snapper.cc:610
 msgid "\t--userdata, -u <userdata>\tUserdata for snapshot."
-msgstr "\t--userdata, -u <dados_de_usuário>\tDados de usuário para o snapshot."
+msgstr "\t--userdata, -u <用户数据> \t快照的用户数据。"
 
 #: ../client/snapper.cc:1144
 msgid "\t--verbose, -v\t\t\tIncrease verbosity."
-msgstr "\t--verbose, -v\t\t\tAumentar detalhamento."
+msgstr "\t--verbose, -v\t\t\t显示调试信息。"
 
 #: ../client/snapper.cc:1147
 msgid "\t--version\t\t\tPrint version and exit."
-msgstr "\t--version\t\t\tImprimir versão e sair."
+msgstr "\t--version\t\t\t打印版本号并退出。"
 
 #: ../client/snapper.cc:1045
 msgid "\tsnapper cleanup <cleanup-algorithm>"
-msgstr "\tsnapper cleanup <algoritmo_de_limpeza>"
+msgstr "\tsnapper cleanup <清空算法>"
 
 #: ../client/snapper.cc:468
 msgid "\tsnapper create"
@@ -103,11 +97,11 @@ msgstr "\tsnapper create"
 
 #: ../client/snapper.cc:242
 msgid "\tsnapper create-config <subvolume>"
-msgstr "\tsnapper create-config <subvolume>"
+msgstr "\tsnapper create-config <子卷>"
 
 #: ../client/snapper.cc:659
 msgid "\tsnapper delete <number>"
-msgstr "\tsnapper delete <número>"
+msgstr "\tsnapper delete <编号>"
 
 #: ../client/snapper.cc:299
 msgid "\tsnapper delete-config"
@@ -115,7 +109,7 @@ msgstr "\tsnapper delete-config"
 
 #: ../client/snapper.cc:824
 msgid "\tsnapper diff <number1>..<number2> [files]"
-msgstr "\tsnapper diff <número1>..<número2> [arquivos]"
+msgstr "\tsnapper diff <编号1>..<编号2> [文件]"
 
 #: ../client/snapper.cc:322
 msgid "\tsnapper list"
@@ -127,99 +121,99 @@ msgstr "\tsnapper list-configs"
 
 #: ../client/snapper.cc:605
 msgid "\tsnapper modify <number>"
-msgstr "\tsnapper modify <número>"
+msgstr "\tsnapper modify <编号>"
 
 #: ../client/snapper.cc:713
 msgid "\tsnapper mount <number>"
-msgstr "\tsnapper mount <número>"
+msgstr "\tsnapper mount <编号>"
 
 #: ../client/snapper.cc:769
 msgid "\tsnapper status <number1>..<number2>"
-msgstr "\tsnapper status <número1>..<número2>"
+msgstr "\tsnapper status <编号1>..<编号2>"
 
 #: ../client/snapper.cc:741
 msgid "\tsnapper umount <number>"
-msgstr "\tsnapper umount <número>"
+msgstr "\tsnapper umount <编号>"
 
 #: ../client/snapper.cc:878
 msgid "\tsnapper undochange <number1>..<number2> [files]"
-msgstr "\tsnapper undochange <número1>..<número2> [arquivos]"
+msgstr "\tsnapper undochange  <编号1>..<编号2> [文件]"
 
 #: ../client/snapper.cc:1142
 msgid "    Global options:"
-msgstr "    Opções globais:"
+msgstr "    全局选项："
 
 #: ../client/snapper.cc:470
 msgid "    Options for 'create' command:"
-msgstr "    Opções do comando 'create':"
+msgstr "    ‘create’ 命令的选项："
 
 #: ../client/snapper.cc:244
 msgid "    Options for 'create-config' command:"
-msgstr "    Opções do comando 'create-config':"
+msgstr "    ‘create-config’ 命令的选项："
 
 #: ../client/snapper.cc:324
 msgid "    Options for 'list' command:"
-msgstr "    Opções do comando 'list':"
+msgstr "    ‘list’ 命令的选项："
 
 #: ../client/snapper.cc:607
 msgid "    Options for 'modify' command:"
-msgstr "    Opções do comando 'modify':"
+msgstr "    ‘modify’ 命令的选项："
 
 #: ../client/snapper.cc:771
 msgid "    Options for 'status' command:"
-msgstr "    Opções do comando 'status':"
+msgstr "    ‘status’ 命令的选项："
 
 #: ../client/snapper.cc:880
 msgid "    Options for 'undochange' command:"
-msgstr "    Opções do comando 'undochange':"
+msgstr "    ‘undochange’ 命令的选项："
 
 #: ../client/snapper.cc:1044
 msgid "  Cleanup snapshots:"
-msgstr "  Limpar snapshots:"
+msgstr "  清空快照："
 
 #: ../client/snapper.cc:768 ../client/snapper.cc:823
 msgid "  Comparing snapshots:"
-msgstr "  Comparando snapshots:"
+msgstr "  对比快照："
 
 #: ../client/snapper.cc:241
 msgid "  Create config:"
-msgstr "  Criar configuração:"
+msgstr "  创建配置："
 
 #: ../client/snapper.cc:467
 msgid "  Create snapshot:"
-msgstr "  Criar snapshot:"
+msgstr "  创建快照："
 
 #: ../client/snapper.cc:298
 msgid "  Delete config:"
-msgstr "  Excluir configuração:"
+msgstr "  删除配置："
 
 #: ../client/snapper.cc:658
 msgid "  Delete snapshot:"
-msgstr "  Remover snapshot:"
+msgstr "  删除快照："
 
 #: ../client/snapper.cc:202
 msgid "  List configs:"
-msgstr "  Listar configurações:"
+msgstr "  列出配置："
 
 #: ../client/snapper.cc:321
 msgid "  List snapshots:"
-msgstr "  Listar snapshots:"
+msgstr "  列出快照："
 
 #: ../client/snapper.cc:604
 msgid "  Modify snapshot:"
-msgstr "  Alterar snapshot:"
+msgstr "  修订快照："
 
 #: ../client/snapper.cc:712
 msgid "  Mount snapshot:"
-msgstr "  Montar snapshot:"
+msgstr "  挂载快照："
 
 #: ../client/snapper.cc:740
 msgid "  Umount snapshot:"
-msgstr "  Desmontar snapshot:"
+msgstr "  卸载快照："
 
 #: ../client/snapper.cc:877
 msgid "  Undo changes:"
-msgstr "  Desfazer alterações:"
+msgstr "  取消更改（回滚）："
 
 #: ../client/snapper.cc:373 ../client/snapper.cc:402
 msgid "#"
@@ -227,344 +221,338 @@ msgstr "#"
 
 #: ../client/snapper.cc:377
 msgid "Cleanup"
-msgstr "Limpeza"
+msgstr "清空"
 
 #: ../client/snapper.cc:1060
 msgid "Command 'cleanup' needs one arguments."
-msgstr "O comando 'cleanup' precisa de um argumento."
+msgstr "命令 'cleanup' 需要一个参数。"
 
 #: ../client/snapper.cc:499
 msgid "Command 'create' does not take arguments."
-msgstr "O comando 'create' não aceita argumentos."
+msgstr "命令 'create' 不接受参数。"
 
 #: ../client/snapper.cc:263
 msgid "Command 'create-config' needs one argument."
-msgstr "O comando 'create-config' precisa de um argumento."
+msgstr "命令 'create-config' 需要一个参数。"
 
 #: ../client/snapper.cc:1092
 #| msgid "Command 'help' does not take arguments."
 msgid "Command 'debug' does not take arguments."
-msgstr "O comando 'debug' não aceita argumentos."
+msgstr "命令 'debug' 不接受参数。"
 
 #: ../client/snapper.cc:670
 msgid "Command 'delete' needs at least one argument."
-msgstr "O comando 'delete' precisa de, no mínimo, um argumento."
+msgstr "命令 'delete' 需要至少一个参数。"
 
 #: ../client/snapper.cc:310
 msgid "Command 'delete-config' does not take arguments."
-msgstr "O comando 'delete-config' não aceita argumentos."
+msgstr "命令 'delete-config' 不接受参数。"
 
 #: ../client/snapper.cc:1135
 msgid "Command 'help' does not take arguments."
-msgstr "O comando 'help' não aceita argumentos."
+msgstr "命令 'help' 不接受参数。"
 
 #: ../client/snapper.cc:341
 msgid "Command 'list' does not take arguments."
-msgstr "O comando 'list' não aceita argumentos."
+msgstr "命令 'list' 不接受参数。"
 
 #: ../client/snapper.cc:214
 msgid "Command 'list-configs' does not take arguments."
-msgstr "O comando 'list-configs' não aceita argumentos."
+msgstr "命令 'list-configs' 不接受参数。"
 
 #: ../client/snapper.cc:629
 msgid "Command 'modify' needs at least one argument."
-msgstr "O comando 'modify' precisa de, no mínimo, um argumento."
+msgstr "命令 'modify' 需要至少一个参数。"
 
 #: ../client/snapper.cc:724 ../client/snapper.cc:752
 msgid "Command 'mount' needs at least one argument."
-msgstr "O comando 'mount' precisa de, no mínimo, um argumento."
+msgstr "命令 'mount' 需要至少一个参数。"
 
 #: ../client/snapper.cc:788
 msgid "Command 'status' needs one argument."
-msgstr "O comando 'status' precisa de um argumento."
+msgstr "命令 'status' 需要一个参数。"
 
 #: ../client/snapper.cc:897
 msgid "Command 'undochange' needs at least one argument."
-msgstr "O comando 'undochange' precisa de, no mínimo, um argumento."
+msgstr "命令 'undochange' 需要至少一个参数。"
 
 #: ../client/snapper.cc:221
 msgid "Config"
-msgstr "Configuração"
+msgstr "配置"
 
 #: ../client/snapper.cc:1275
 #| msgid "Config '%s' not found."
 msgid "Config is in use."
-msgstr "A configuração está em uso."
+msgstr "配置正在使用中。"
 
 #: ../client/snapper.cc:1273
 #| msgid "Config Dialog"
 msgid "Config is locked."
-msgstr "A configuração está bloqueada."
+msgstr "配置已锁定。"
 
 #: ../client/snapper.cc:1281
 #, c-format
 msgid "Creating config failed (%s)."
-msgstr "Falha ao criar a configuração (%s)."
+msgstr "创建配置失败（%s）。"
 
 #: ../client/snapper.cc:1285
 #| msgid "Creating config failed (%s)."
 msgid "Creating snapshot failed."
-msgstr "Falha ao criar o snapshot."
+msgstr "创建快照失败。"
 
 #: ../client/snapper.cc:375 ../client/snapper.cc:403
 msgid "Date"
-msgstr "Data"
+msgstr "日期"
 
 #: ../client/snapper.cc:1283
 #, c-format
 msgid "Deleting config failed (%s)."
-msgstr "Falha ao excluir a configuração (%s)."
+msgstr "删除配置失败（%s）。"
 
 #: ../client/snapper.cc:1287
 #| msgid "Deleting the CA failed: %1."
 msgid "Deleting snapshot failed."
-msgstr "Falha ao remover o snapshot."
+msgstr "删除快照失败。"
 
 #: ../client/snapper.cc:378 ../client/snapper.cc:405 ../client/snapper.cc:433
 msgid "Description"
-msgstr "Descrição"
+msgstr "描述"
 
 #: ../client/snapper.cc:287
 msgid "Detecting filesystem type failed."
-msgstr "Falha ao detectar o tipo de sistema de arquivos."
+msgstr "检测文件系统类型失败。"
 
 #: ../client/snapper.cc:1289 ../client/snapper.cc:1294
+#| msgid "Failed"
 msgid "Failure"
-msgstr "Falha"
+msgstr "失败"
 
 #: ../client/snapper.cc:951
 #, c-format
 msgid "File '%s' not found."
-msgstr "Arquivo '%s' não encontrado."
+msgstr "没有找到 '%s' 文件。"
 
 # error box title
 #: ../client/snapper.cc:1279
 #| msgid "I/O Error"
 msgid "IO Error."
-msgstr "Erro de E/S."
+msgstr "输入/输出错误。"
 
 #: ../client/snapper.cc:90
 msgid "Identical snapshots."
-msgstr "Snapshots idênticos."
+msgstr "重复的快照。"
 
 #: ../client/snapper.cc:1271
 #| msgid "Invalid snapshot."
 msgid "Illegal Snapshot."
-msgstr "Snapshot ilegal."
+msgstr "非法的快照。"
 
 #: ../client/snapper.cc:67
 #, c-format
 msgid "Invalid snapshot '%s'."
-msgstr "Snapshot inválido '%s'."
+msgstr "无效的快照 ‘%s’。"
 
 #: ../client/snapper.cc:81 ../client/snapper.cc:919
 msgid "Invalid snapshots."
-msgstr "Snapshots inválidos."
+msgstr "无效的快照。"
 
 #: ../client/snapper.cc:270
 msgid "Invalid subvolume."
-msgstr "Subvolume inválido."
+msgstr "无效的子卷。"
 
 #: ../client/snapper.cc:1219
 #, c-format
 msgid "Invalid table style %d."
-msgstr "Estilo de tabela inválido %d."
+msgstr "无效的表格样式 %d。"
 
 #: ../client/snapper.cc:107 ../client/snapper.cc:116 ../client/snapper.cc:125
 #: ../client/snapper.cc:1269
 msgid "Invalid userdata."
-msgstr "Dados de usuário inválidos."
+msgstr "无效的用户数据。"
 
 #: ../client/utils/GetOpts.cc:68
 #, c-format
 msgid "Missing argument for command option '%s'."
-msgstr "Argumento ausente para opção do comando '%s'."
+msgstr "缺少用于 '%s' 命令选项的参数。"
 
 #: ../client/utils/GetOpts.cc:66
 #, c-format
 msgid "Missing argument for global option '%s'."
-msgstr "Argumento ausente para para a opção global '%s'."
+msgstr "缺少用于 '%s' 全局选项的参数。"
 
 #: ../client/snapper.cc:561
 msgid "Missing command argument."
-msgstr "Argumento de comando faltante."
+msgstr "缺少命令参数。"
 
 #: ../client/snapper.cc:555
 msgid "Missing or invalid pre-number."
-msgstr "Número anterior ausente ou inválido."
+msgstr "缺失或无效的预快照编号。"
 
 #: ../client/snapper.cc:1242
 msgid "No command provided."
-msgstr "Nenhum comando fornecido."
+msgstr "没有提供这个命令。"
 
 #: ../client/snapper.cc:1267
 #| msgid "(owner permissions off)"
 msgid "No permissions."
-msgstr "Sem permissões."
+msgstr "无权限。"
 
 #: ../client/snapper.cc:806 ../client/snapper.cc:912
 #, c-format
 msgid "Opening file '%s' failed."
-msgstr "Falha ao abrir o arquivo '%s'."
+msgstr "打开 '%s' 文件失败。"
 
 #: ../client/snapper.cc:430
 msgid "Post #"
-msgstr "Post #"
+msgstr "后 #"
 
 #: ../client/snapper.cc:432
 msgid "Post Date"
-msgstr "Data posterior"
+msgstr "后一天"
 
 #: ../client/snapper.cc:374 ../client/snapper.cc:429
 msgid "Pre #"
-msgstr "Pre #"
+msgstr "前 #"
 
 #: ../client/snapper.cc:431
 msgid "Pre Date"
-msgstr "Data anterior"
+msgstr "前一天"
 
 #: ../client/snapper.cc:222
 msgid "Subvolume"
-msgstr "Subvolume"
+msgstr "子卷"
 
 #: ../client/snapper.cc:1243 ../client/snapper.cc:1252
 #: ../client/utils/GetOpts.cc:61 ../client/utils/GetOpts.cc:69
 #| msgid "Try 'snapper help' for more information."
 msgid "Try 'snapper --help' for more information."
-msgstr "Tente 'snapper --help' para obter mais informações."
+msgstr "使用 'snapper help' 了解更多命令。"
 
 #: ../client/snapper.cc:372
 msgid "Type"
-msgstr "Tipo"
+msgstr "类型"
 
 #: ../client/snapper.cc:1080
 #, c-format
 msgid "Unknown cleanup algorithm '%s'."
-msgstr "Algoritmo de limpeza desconhecido '%s'."
+msgstr "未知的清空算法 '%s'。"
 
 #: ../client/snapper.cc:1251
 #, c-format
 msgid "Unknown command '%s'."
-msgstr "Comando desconhecido '%s'."
+msgstr "未知命令 '%s'。"
 
 #: ../client/snapper.cc:1265
 #| msgid "Unknown command"
 msgid "Unknown config."
-msgstr "Configuração desconhecida."
+msgstr "未知配置。"
 
 #: ../client/snapper.cc:1277
 #| msgid "Unknown type."
 msgid "Unknown file."
-msgstr "Arquivo desconhecido."
+msgstr "未知文件。"
 
 #: ../client/utils/GetOpts.cc:58
 #, c-format
 msgid "Unknown global option '%s'."
-msgstr "Opção global desconhecida '%s'."
+msgstr "未知的全局选项 ‘%s’。"
 
 #: ../client/utils/GetOpts.cc:60
 #, c-format
 msgid "Unknown option '%s' for command '%s'."
-msgstr "Opção desconhecida '%s' para comando ' %s'."
+msgstr "未知的用于 '%s' 命令的 '%s' 选项。"
 
 #: ../client/snapper.cc:527
 msgid "Unknown type of snapshot."
-msgstr "Tipo de snapshot desconhecido."
+msgstr "未知快照类型。"
 
 #: ../client/snapper.cc:360
 msgid "Unknown type of snapshots."
-msgstr "Tipo de snapshots desconhecido."
+msgstr "未知快照类型。"
 
 #: ../client/snapper.cc:1220
 #, c-format
 msgid "Use an integer number from %d to %d"
-msgstr "Use um número inteiro de %d a %d"
+msgstr "使用一个从 %d 到 %d 的整数"
 
 #: ../client/snapper.cc:376 ../client/snapper.cc:404
 #| msgid "Userdata"
 msgid "User"
-msgstr "Usuário"
+msgstr "用户"
 
 #: ../client/snapper.cc:379 ../client/snapper.cc:406 ../client/snapper.cc:434
 msgid "Userdata"
-msgstr "Dados de usuário"
+msgstr "用户数据"
 
 #: ../client/snapper.cc:986
 #, c-format
 msgid "create:%d modify:%d delete:%d"
-msgstr "criar:%d modificar:%d remover:%d"
+msgstr "创建：%d 修订：%d 删除：%d"
 
 #: ../client/snapper.cc:1011
 #, c-format
 msgid "creating %s"
-msgstr "criando %s"
+msgstr "正在创建 %s"
 
 #: ../client/snapper.cc:1017
 #, c-format
 msgid "deleting %s"
-msgstr "removendo %s"
+msgstr "正在删除 %s"
 
 #: ../client/snapper.cc:1027
 #, c-format
 msgid "failed to create %s"
-msgstr "falha ao criar %s"
+msgstr "创建 %s 失败"
 
 #: ../client/snapper.cc:1033
 #, c-format
 msgid "failed to delete %s"
-msgstr "falha ao remover %s"
+msgstr "删除 %s 失败"
 
 #: ../client/snapper.cc:1030
 #, c-format
 msgid "failed to modify %s"
-msgstr "falha ao alterar %s"
+msgstr "修订 %s 失败"
 
 #: ../client/snapper.cc:1014
 #, c-format
 msgid "modifying %s"
-msgstr "alterando %s"
+msgstr "正在修订 %s"
 
 #: ../client/snapper.cc:982
 #| msgid "Nothing to do."
 msgid "nothing to do"
-msgstr "nada a fazer"
+msgstr "无事可做"
 
 #: ../client/snapper.cc:1139
 msgid ""
 "usage: snapper [--global-options] <command> [--command-options] "
 "[command-arguments]"
-msgstr ""
-"uso: snapper [--opções-globais] <comando> [--opções-do-comando] [argumentos]"
+msgstr "用法：snapper  [--全局选项] <命令> [--命令选项] [命令参数]"
 
 #~ msgid "\t--disable-filters\t\tDisable filters."
-#~ msgstr "\t--disable-filters\t\tDesabilitar filtros."
+#~ msgstr "\t--disable-filters \t\t禁用过滤器。"
 
 #~ msgid "Command failed (%s). See log for more information."
-#~ msgstr "O comando falhou (%s). Veja o log para mais informações."
+#~ msgstr "执行命令失败（ %s）。参考日志文件获取更多信息。"
 
 #~ msgid "Config '%s' is invalid."
-#~ msgstr "A configuração '%s' é inválida."
+#~ msgstr "配置文件 '%s' 无效。"
 
 #~ msgid "Listing configs failed (%s)."
-#~ msgstr "Falha ao listar arquivos de configuração (%s)."
+#~ msgstr "列出配置文件失败（%s）。"
 
 #~ msgid "Snapshot '%u' not found."
-#~ msgstr "Snapshot '%u' não foi encontrado."
+#~ msgstr "快照 '%u' 未找到。"
 
 #~ msgid "comparing snapshots..."
-#~ msgstr "comparando snapshots..."
+#~ msgstr "对比快照中..."
 
 #~ msgid "done"
-#~ msgstr "concluído"
+#~ msgstr "完成"
 
 #~ msgid "undoing change done"
-#~ msgstr "reversão das alterações concluída"
+#~ msgstr "回滚完成"
 
 #~ msgid "undoing change..."
-#~ msgstr "revertendo alteração..."
-
-#~ msgid "Command 'modify' needs one argument."
-#~ msgstr "O comando 'modify' precisa de um argumento."
-
-#~ msgid "    Options for 'diff' command:"
-#~ msgstr "    Opções do comando 'diff':"
+#~ msgstr "正在回滚..."
